nova atualização do código

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ input:focus, textarea:focus { outline:2px solid var(--prim); border-color:transp
             <p class="paragrafo-projetos">Aplicativo simples de análise comportamental para facilitar a tomada de decisões.</p>
             <div class="card__links">
               <a target="_blank" rel="noopener" href="#">Ver Online</a>
-              <a target="_blank" rel="noopener" href="#">Código</a>
+              <a target="_blank" rel="noopener" href="#teste">Código</a>
             </div>
           </div>
         </article>
